[package]
name = "rust_tree"
version = "1.2.2"
edition = "2021"
authors = ["Peter Etelej <peter@etelej.com>"]
description = """
tree is a cross-platform tree application and library that produces
an indented directory listing of files.
"""
keywords = ["tree", "cli", "utility"]
categories = ["command-line-utilities"]
license = "MIT"
homepage = "https://github.com/peteretelej/tree"
repository = "https://github.com/peteretelej/tree"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
ansi_term = "0.12.1"
glob = "0.3.2"
is_executable = "1.0.1"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.2"

[[bin]]
name = "tree"
path = "src/main.rs"

[target.'cfg(windows)']
rustflags = ["-C", "target-feature=+crt-static"]
