[package]
name = "tree-qa"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bollard = "0.17"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
colored = "2.0"
tar = "0.4"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

[[bin]]
name = "qa"
path = "src/main.rs"